# ntn-constellation

./: .gitignore  README.md  pyproject.toml
data/cli-iridium/: constellation.czml  raw.tle
data/cli-iridium/positions/: isls.txt  start_date.txt  tles.txt
data/live-starlink/: starlink.czml
data/live-starlink/.tle-cache/: celestrak_starlink.tle
data/live-starlink/scenario/positions/: isls.txt  start_date.txt  tles.txt
data/preset-kuiper/positions/: gw_positions.txt  isls.txt  start_date.txt  tles.txt
examples/: live_starlink_demo.py  walker_kuiper.py
ntn_constellation/: __init__.py  cesium_export.py  cli.py  feeds.py  isl.py  ns3_export.py  presets.py  propagator.py
tests/: test_basic.py
